# programming-languages-w2v

./: .gitignore  README.md  create_parser.bat  create_parser.sh  example.ipynb  gensim.ipynb  presentation.md  pyproject.toml  requirements.txt
data/: csharp_codes.rar
grammars/: CPP14Parser.g4  readme.md
src/: dataset.py  model.py  tokenizers.py
src/java_parser/: CPP14Parser.java  CSharpLexer.java  CSharpParser.java  CSharpParserBaseVisitor.java  CSharpParserVisitor.java  CSharpTokenizerVisitor.java  CppParseListener.java  CppTokenizer.java  CppTokenizerVisitor.java  Tokenizer.java
src/w2vtokenizer/: pom.xml
src/w2vtokenizer/src/main/antlr4/com/codetokenizer/: CPP14Lexer.g4  GoParser.g4
src/w2vtokenizer/src/main/java/com/codetokenizer/: CSharpLexerBase.java  CSharpParserBase.java  CSharpTokenizerVisitor.java  CppTokenizerVisitor.java  GoParserBase.java  GoTokenizerVisitor.java  Python3LexerBase.java  Python3ParserBase.java  Python3TokenizerVisitor.java  Tokenizer.java
tools/: .gitignore  go.mod  go.sum
tools/cmd/codefetcher/: main.go
tools/codefetcher/: build.sh  fetcher.go  fetcher_test.go  go.mod  go.sum  storage.go  storage_test.go
tools/codefetcher/cmd/codefetcher/: main.go
tools/codefetcher/codefetcher/: fetcher.go  language.go  language_test.go  storage_test.go
tools/dbmerger/: DbMerger.csproj  DbMerger.sln  Dockerfile  Program.cs  SQLiteDbMerger.cs
